<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Default entries -->
    <string name="app_name">RIOT</string>

    <string-array name="menu_array">
        <item>Home</item>
        <item>Filter</item>
        <item>RIOT-Account</item>
        <item>Language</item>
        <item>Reset</item>
        <item>etc.</item>
    </string-array>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="settings">Settings</string>

    <!-- Fragment main (all entries for main please insert here) -->
    <string name="action_refresh">Refresh</string>

    <!-- Fragment language (all entries for language please insert here) -->
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="flag_uk">Flag United Kingdom</string>
    <string name="flag_de">Flag Germany</string>
    <string name="lang_header">Please select your preferred language</string>
    <string name="desc_uk">Sets the language to English-UK.</string>
    <string name="desc_ger">Sets the language to German.</string>

    <!-- Fragment account (all entries for account please insert here) -->
    <string name="add_account">Add Account</string>
    <string name="add_event">Add Event</string>

</resources>